CLEREZZA-435: replaced tabs with spaces
git-svn-id: https://svn.apache.org/repos/asf/clerezza/trunk@1458211 13f79535-47bb-0310-9956-ffa450edef68